$Id$
List of user-visible changes of Public Domain Ratfor.

New in 1.0h
-----------
 
 * Extended make rules useful to maintainers, in particular with the
   addition of files `GNUmakefile' and `maint.mk'

New in 1.0g
-----------
 
 * The make target `clean' should now work correctly even an a already
   cleaned tree (previously it could fail if no temporary directory used
   by test scripts was present!)
 * Ratfor uses Git as its version control system.

New in 1.0f
-----------

 * The format of error messages has been improved -- now it follows the
   gcc-style `FILENAME:LINENO: ERRMSG'
 * Bugfix in option parsing: the option `-l' is now recognized again
 * The make targets `distcheck' and `clean' should now work.
 * The make target `check' now let the user override the variable
   `$(TESTS)' withour problems
 * The list of known bugs has been extended and improved.
 * The ratfor binary used by the testsuite is now correctly rebuild
   when needed, even from within the `tests' directory
 * The ratfor source code has been modularized and cleaned somewhat.

New in 1.0e
-----------

 * On non-fatal syntax errors in input, a proper error message is
   displayed on standard error, but input processing is not stopped
   (this was also the previous behaviour).  However, if any syntax
   error occourred, ratfor is now guaranteed to eventually exit with
   exit status `1' (previously it exited with exit status `0').
 * Ratfor does not more force quoted filenames for `include' to work.
 * Unfortunately, Ratfor does not more even accept quoted filenames
   passed to `include'.  Hopefully this will be fixed in a future
   release.

New in 1.0d
-----------

 * Ratfor build system now uses automake and autoconf.
 * Added an article of B.W. Kernighan on ratfor (doc/ratfor.pdf).
 * Added a testsuite.
 * Added this NEWS file.
 * Ratfor uses Subversion as its version control system.

New in 1.0c
-----------
 
 * NOTHING: never released

New in 1.0b
-----------
 